# mcp_project

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  sample-fargate-1.json  sample-fargate-1_old.json
.github/workflows/: aws.yml  deploy.yml
src/mcp_project/: app.py  client.py
src/mcp_project/agents/: key_officers_agent.py
src/mcp_project/utils/: utils.py
